tests/good/datatype_containing_type_application.ppl
data Box a = B a;
data Foo = F (Box Bool);
let b = F (B True) in ()

