tests/bad/type_parameter_double.ppl
data T a = MkT (T (T a));
()
